<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_recent_content_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_header_home_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_2"
                android:layout_marginRight="@dimen/margin_2"
                android:drawableLeft="@drawable/circle_home_icon"
                android:background="?attr/selectableItemBackground"
                app:backgroundTint="@color/green"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:text="@string/home" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_header_work_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_2"
                android:layout_marginRight="@dimen/margin_2"
                android:drawableLeft="@drawable/circle_work_icon"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:text="@string/work"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_header_starred_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_2"
                android:layout_marginRight="@dimen/margin_2"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/circle_starred_icon"
                android:text="@string/starred"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_recent_content_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/header_height"
        android:background="@color/white"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbarSize="@dimen/margin_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_recent_content_header"/>

</androidx.constraintlayout.widget.ConstraintLayout>
