<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Label -->
    <TextView
        android:id="@+id/dialog_fragment_create_label_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_10"
        android:text="@string/create_label"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <AutoCompleteTextView
        android:id="@+id/dialog_fragment_create_label_auto_complete_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="8dp"
        android:hint="@string/create_label"
        android:paddingLeft="@dimen/margin_8"
        android:paddingRight="@dimen/margin_8"
        android:paddingBottom="@dimen/margin_8"
        android:inputType="textCapWords"
        android:text=""

        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_fragment_create_label_desc"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.026041666" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9713542" />

    <Button
        android:id="@+id/dialog_fragment_create_label_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_4"
        android:layout_marginBottom="@dimen/margin_8"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.488" />

    <Button
        android:id="@+id/dialog_fragment_create_label_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_fragment_create_label_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="86dp" />
</androidx.constraintlayout.widget.ConstraintLayout>